--- a/templates/master_etc_named.conf.j2
+++ b/templates/master_etc_named.conf.j2
@@ -24,7 +24,7 @@ options {
 {% if bind_check_names is defined %}
   check-names  {{ bind_check_names }};
 {% endif %}
-
+  minimal-responses {% if bind_minimal_responses %}yes{% else %}no{% endif %};
   recursion {% if bind_recursion %}yes{% else %}no{% endif %};
   {% if bind_recursion %}allow-recursion { {{ bind_allow_recursion|join('; ') }}; };
   {% endif %}
