--- a/templates/master_etc_named.conf.j2
+++ b/templates/master_etc_named.conf.j2
@@ -25,8 +25,6 @@ options {
 {% if bind_check_names is defined %}
   check-names  {{ bind_check_names }};
 {% endif %}
-  {% if bind_geoip_enabled %}geoip-directory  "{{ bind_geoip_directory }}"; 
-  {% endif %}
   minimal-responses {% if bind_minimal_responses %}yes{% else %}no{% endif %};
   recursion {% if bind_recursion %}yes{% else %}no{% endif %};
   {% if bind_recursion %}allow-recursion { {{ bind_allow_recursion|join('; ') }}; };
@@ -51,6 +49,8 @@ options {
 
   querylog yes;
 {% endif %}
+{% if bind_option_raw|length > 0 %} {{ bind_option_raw }};{% endif %}
+
 };
 
 {% if bind_statistics_channels %}
